fix spacing

--- a/assets/stylesheets/base/_form.scss
+++ b/assets/stylesheets/base/_form.scss
@@ -1,7 +1,7 @@
 .form {
 
   &-group {
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 
     &-error {
       border-left: 10px solid $great-secondary;
@@ -162,8 +162,8 @@
   &-section {
     margin: 0 10px 20px;
     padding-bottom: 20px;
-  
-    &--border{
+
+    &--border {
       border-bottom: 1px solid $lighter-grey;
     }
   }
@@ -184,6 +184,7 @@
   display: block;
   float: none;
   margin-bottom: 10px;
+  margin-top: 0;
   padding: 8px 10px 9px 45px;
   position: relative;
 
